<resources>
    <string name="app_name">Wishlist</string>
    <string name="Connexion">Sign in</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="createUsername">Email :</string>
    <string name="createPassword">Password :</string>
    <string name="confirmPassword">Confirm Password :</string>
    <string name="createAccount">Register an account</string>
    <string name="next">Next</string>
    <string name="firstName">First name * :</string>
    <string name="firstNameWithout">First name :</string>
    <string name="lastName">Last name * :</string>
    <string name="lastNameWithout">Last name :</string>
    <string name="addressLine1">Address line 1 * :</string>
    <string name="addressLine1Without">Address line 1 :</string>
    <string name="addressLine2">Address line 2 :</string>
    <string name="city">City * :</string>
    <string name="cityWithout">City :</string>
    <string name="postalCode">Postal code * :</string>
    <string name="postalCodeWithout">Postal code :</string>
    <string-array name="size">
        <item>Undefined</item>
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>
    <string-array name="shoeSize">
        <item>Undefined</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
    </string-array>
    <string-array name="days">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year">
        <item>Year</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>
        <item>1904</item>
        <item>1903</item>
        <item>1902</item>
        <item>1901</item>
        <item>1900</item>
    </string-array>
    <string name="country">Country * :</string>
    <string name="countryWithout">Country :</string>
    <string name="size">Size :</string>
    <string name="birthdate">Birthdate * :</string>
    <string name="birthdateWithout">Birthdate :</string>
    <string name="shoeSize">Shoe size :</string>
    <string name="CreateProfile">Register</string>
    <string name="favoriteColor">Favorite Color :</string>
    <string-array name="favoriteColor">
        <item>Undefined</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="categories">
        <item>Garden</item>
        <item>Clothes</item>
        <item>Music</item>
        <item>Videogames</item>
        <item>Computer</item>
        <item>Games</item>
        <item>Jewelry</item>
        <item>Travel</item>
        <item>Children</item>
        <item>Crafting</item>
        <item>School Furniture</item>
        <item>Home Appliance</item>
        <item>Cooking</item>
        <item>Automotive</item>
        <item>Books</item>
        <item>Movies and TV</item>
        <item>Audio and Multimedia</item>
        <item>Sports</item>
        <item>Pet</item>
    </string-array>
    <string name="Consigne">Fill in these informations to complete your registration. These with a * are required, the others are optionnal</string>
    <string name="wrongDate">Please insert a valid Date</string>
    <string name="changePhoto">Change Photo</string>
    <string name="takeNewPhoto">Take new photo</string>
    <string name="chooseFromMemory">Choose from memory</string>
    <string name="Cancel">Cancel</string>
    <string name="newProductToolbarText">New Object</string>
    <string name="viewProductToolbarText">View Product</string>
    <string name="todoContentDescription">TODO : ContentDescription</string>
    <string name="productDescriptionTitle"><u>Description</u></string>
    <string name="productCategoriesTitle"><u>Category</u></string>
    <string name="productInfoTitle"><u>Extra information</u></string>
    <string name="enterPassword">Enter your password to continue</string>
    <string name="dummyProduct">Show Dummy Product</string>
    <string name="my_profile">My Profile</string>
    <string name="editProductToolbarText">Edit Product</string>
    <string name="productName">Product Name</string>
    <string name="productDescription">Description</string>
    <string name="productCategories">Categories: </string>
    <string name="categoryPH">Category</string>
    <string name="removeButton">Remove</string>
    <string name="textPrice">Price:</string>
    <string name="newProductDescription">"Description: "</string>
    <string name="newWeight">Weight (grams):</string>
    <string name="newDimensions">Dimensions (cm):</string>
    <string name="desire">Desire:</string>
    <string name="newAmounts">"Amounts: "</string>
    <string name="amountReceived">Received</string>
    <string name="amountTotal">Total</string>

    <string name="followListPPdescr">Followed Account\'s Profile Picture</string>
    <string name="followListToolbartext">Follow List</string>
    <string name="enterUserToSearch">Enter searched user\'s email address </string>
    <string name="userSearchTitle">Search user </string>
    <string name="searchUserTitle">All users</string>
    <string name="seeFullProfileButton">See detailed profile</string>
    <string name="seeOtherUsersWishlistsButton">See wishlists</string>
    <string name="followButton">Follow</string>
    <string name="unfollowButton">Unfollow</string>
    <string name="confirm">Done</string>

    <string name="wishlistToolbarText">Wishlist</string>
    <string name="addWishlistDesc">add a wishlist</string>
    <string name="backWishlistMenu">back to main menu</string>
    <string name="strWishlistName">Name of your wishlist:</string>
    <string name="NewWishlistFragment">Create a new wishlist :</string>
    <string name="createWishlistButton">Create</string>
    <string name="wishlistItem_defaultName">Wishlist</string>
    <string name="productItem_defaultName">Product</string>
    <string name="wishlistDetailToolbarText">Products</string>
    <string name="changeWishlistFragment">Edit your wishlist</string>
    <string name="changeWishlistButton">Change</string>
    <string name="strWishlistChange">New name of your wishlist :</string>
    <string name="changeWishlistDesc">Change the name of your wishlist</string>
    <string name="productItem_defaultPrice">0 €</string>
    <string-array name="sortProduct">
        <item>More recent</item>
        <item>Price low -> high</item>
        <item>Price high -> low</item>
    </string-array>
</resources>
