<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/changePhotoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePhoto"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/takeNewPhoto"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:id="@+id/changePhotoTakeNew"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/chooseFromMemory"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:id="@+id/changePhotoMemory"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"

            android:id="@+id/changePhotoCancel"/>
    </RelativeLayout>

</LinearLayout>