<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_weight="100"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <ImageButton
            android:id="@+id/contextMenuWishlist"
            android:layout_width="@dimen/contextMenuHeight"
            android:layout_height="@dimen/contextMenuHeight"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:scaleType="fitCenter"
            android:contentDescription="@string/addWishlistDesc"
            app:srcCompat="@drawable/ic_add_button"
            android:onClick="pressAddButton">
        </ImageButton>

        <TextView
            android:id="@+id/wishlistToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/backArrowWishlist"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            android:text="@string/wishlistToolbarText"
            android:textColor="@color/white"
            android:textSize="25sp">
        </TextView>

        <ImageButton
            android:id="@+id/backArrowWishlist"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/backWishlistMenu"
            android:onClick="onBackPressed"
            app:srcCompat="@drawable/ic_arrow_back_white_30dp">
        </ImageButton>
    </RelativeLayout>


</LinearLayout>