<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/searchUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSearchTitle"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="22sp"/>
    <TextView
        android:id="@+id/searchUserCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterUserToSearch"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_weight="100"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/searchBarUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:layout_marginHorizontal="8dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/okButtonSearchUser"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="OK"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textSize="17sp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"

            android:id="@+id/searchUserCancel"/>
    </RelativeLayout>

</LinearLayout>