<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp">

            <include layout="@layout/other_profile_toolbar" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"/>

                <Button
                    android:id="@+id/profileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="30sp"
                    android:layout_below="@id/profilePhoto"
                    android:text="@string/seeFullProfileButton"
                    android:onClick="seeDetails"
                    />

                <Button
                    android:id="@+id/wishlistsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="30sp"
                    android:layout_below="@id/profileButton"
                    android:onClick="goToFriendWishlist"
                    android:text="@string/seeOtherUsersWishlistsButton" />

                <Button
                    android:id="@+id/followButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="30sp"
                    android:layout_below="@id/wishlistsButton"
                    android:text="@string/followButton"
                    android:onClick="followCurrentUser"/>

                <Button
                    android:id="@+id/unfollowButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="30sp"
                    android:layout_below="@id/wishlistsButton"
                    android:text="@string/unfollowButton"
                    android:visibility="gone"
                    android:onClick="unfollowCurrentUser"/>

            </RelativeLayout>

    </ScrollView>



</LinearLayout>